AOSP/Calendar - Update language to comply with Android's inclusive language guidance
See https://source.android.com/setup/contribute/respectful-code for reference

BUG=161896447

Test: manual - Ran the following tests on Pixel phone. Tested the calendar UI.

$ make -j 40
$ make Calendar -j
$ make CalendarTests -j

$ ls -l out/target/product/bonito/product/app/Calendar/Calendar.apk out/target/product/bonito/testcases/CalendarTests/arm64/CalendarTests.apk

$ adb install -r -d -g out/target/product/bonito/product/app/Calendar/Calendar.apk
$ adb install -r -d -g out/target/product/bonito/testcases/CalendarTests/arm64/CalendarTests.apk

$ adb shell am instrument -w  com.android.calendar.tests
Time: 0.127
OK (22 tests)

Change-Id: I120568d69f9b2cbf63c1846e4113b32e8cd3a35c

--- a/res/layout-sw600dp-w960dp-h527dp-land/all_in_one.xml
+++ b/res/layout-sw600dp-w960dp-h527dp-land/all_in_one.xml
@@ -55,7 +55,7 @@
             android:textSize="18sp" />
     </LinearLayout>
 
-    <!-- This is a dummy view to make hiding/unhiding easier -->
+    <!-- This is a nonessential view to make hiding/unhiding easier -->
     <View
         android:id="@+id/mini_month_container"
         android:layout_below="@id/date_group"
